--- a/demo/examples/g-component.example
+++ b/demo/examples/g-component.example
@@ -1,1 +1,22 @@
-<GComponent />
+<GComponent
+  ourFriends={[
+   {name: "electrode", img: "//goo.gl/CZ4wAF", size: 12},
+   {name: "hapi", img: "//goo.gl/q9uIFW", size: 12},
+   {name: "React", img: "//goo.gl/dL5MXT", size: 12},
+  ]}
+
+  invitees={[
+   {name: "electrode", invited: false},
+   {name: "hapi", invited: false},
+   {name: "React", invited: false}
+  ]}
+
+  toggleGuest={(invitee) => alert('Edit invitees array in playground to invite a guest!')}
+
+  message={(c)=>(
+
+  <div className={c}>Change key 'invited' to true in 'invitees' array in the playground
+  above to invite guests!</div>
+
+  )}
+/>
