--- a/demo/examples/guest-list.example
+++ b/demo/examples/guest-list.example
@@ -1,7 +1,7 @@
 <GuestList
   invitees={[
   {name: 'John Smith', invited: false},
-  {name: 'Jane Smith', invited: false},
+  {name: 'Jane Smith', invited: true},
   {name: 'Dan Jones', invited: false}
   ]}
   toggleGuest={(invitee) => alert(invitee.name)}
