--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "lib/index.js",
   "author": {
     "name": "",
-    "url": "https://github.com/"
+    "url": "https://github.com/guymorita/g-component"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com//.git"
+    "url": "https://github.com/guymorita/g-component"
   },
   "bugs": {
-    "url": "https://github.com///issues"
+    "url": "https://github.com/guymorita/g-component/issues"
   },
-  "homepage": "https://github.com//",
+  "homepage": "https://github.com/guymorita/g-component",
   "dependencies": {},
   "devDependencies": {
     "electrode-archetype-react-component": "1.3.0",
